[workspace]
members = [
   "async_db",
   "async_ex1",
   "async_ex2",
   "async_pg",
   "awc_https",
   "basics",
   "casbin",
   "cookie-auth",
   "cookie-session",
   "diesel",
   "docker_sample",
   "error_handling",
   "form",
   "graphql-demo",
   "hello-world",
   "http-proxy",
   "json",
   "json_error",
   "jsonrpc",
   "juniper",
   "middleware",
   "multipart",
   "openssl",
   "r2d2",
   "run-in-thread",
   "rustls",
   "server-sent-events",
   "shutdown-server",
   "simple-auth-server",
   "state",
   "static_index",
   "template_askama",
   "template_handlebars",
   "template_tera",
   # "template_yarte",
   "todo",
   "unix-socket",
#   "websocket",
#   "websocket-chat",
#   "websocket-tcp-chat",
]

[patch.crates-io]
ntex-files = { git = "https://github.com/ntex-rs/ntex-extras.git" }
ntex-session = { git = "https://github.com/ntex-rs/ntex-extras.git" }
ntex-identity = { git = "https://github.com/ntex-rs/ntex-extras.git" }
ntex-multipart = { git = "https://github.com/ntex-rs/ntex-extras.git" }
