[package]
name = "async_db"
version = "5.0.0"
authors = ["Darin Gordon <dkcdkg@gmail.com>"]
edition = "2018"

[dependencies]
ntex = { version = "3.0.0-pre.2", features = ["tokio"] }
env_logger = "0.11"
futures = "0.3"
derive_more = "0.99"
num_cpus = "1.13"
r2d2 = "0.8"
r2d2_sqlite = "0.14"
rusqlite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
