[package]
name = "awc_examples"
version = "2.0.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"

[dependencies]
ntex = "0.1.8"
bytes = "0.5.4"
env_logger = "0.7"
futures = "0.3.4"
serde = { version = "1.0.43", features = ["derive"] }
serde_json = "1.0.16"
validator = "0.10"
validator_derive = "0.10"
