[package]
name = "awc_examples"
version = "5.0.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"

[dependencies]
ntex = { version = "3.0.0-pre.2", features = ["tokio"] }
env_logger = "0.11"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.10"
validator_derive = "0.10"
