[package]
name = "async_pg"
version = "0.1.0"
authors = ["dowwie <dkcdkg@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
ntex = "0.3"
config = "0.10"
deadpool-postgres = "0.5"
derive_more = "0.99"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5"
