[package]
name = "diesel-example"
version = "1.0.0"
authors = [
  "Nikolay Kim <fafhrd91@gmail.com>",
  "Rob Ede <robjtede@icloud.com>",
]
edition = "2018"

[dependencies]
ntex = "0.3"
bytes = "1.0"
diesel = { version = "1.1", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
