[package]
name = "json-example"
version = "0.2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[dependencies]
ntex = { version = "0.6.2", features = ["tokio"] }
futures = "0.3"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
