[package]
name = "json-example"
version = "3.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[dependencies]
ntex = { version = "3.0.0-pre.2", features = ["tokio"] }
futures = "0.3"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
