[package]
name = "jsonrpc-example"
version = "3.0.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"

[dependencies]
ntex = { version = "3.0.0-pre.2", features = ["tokio"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
