[package]
name = "mongodb"
version = "0.1.0"
authors = ["krircc <krircc@qq.com>"]
edition = "2018"

[dependencies]
ntex = "0.2.0-b.14"
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver", branch = "master" }
bson = "0.14.1"
serde = { version = "1.0.106", features = ["derive"] }
futures = "0.3.4"
anyhow = "1.0.28"
