[package]
name = "multipart-example"
version = "0.5.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Simple file uploader in Ntex with Async/Await"
keywords = ["ntex", "multipart"]
repository = "https://github.com/ntex/examples"
readme = "README.md"

[dependencies]
ntex = { version = "1.0.0-b.1", features = ["tokio"] }
ntex-multipart = "0.4.0-b.0"
futures = "0.3"
