[package]
name = "multipart-example"
version = "0.5.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Simple file uploader in Ntex with Async/Await"
keywords = ["ntex", "multipart"]
repository = "https://github.com/ntex/examples"
readme = "README.md"

[dependencies]
ntex = { version = "2", features = ["tokio"] }
ntex-multipart = "1.0"
futures = "0.3"
