[package]
name = "multipart-example"
version = "3.0.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Simple file uploader in Ntex with Async/Await"
keywords = ["ntex", "multipart"]
repository = "https://github.com/ntex/examples"
readme = "README.md"

[dependencies]
ntex = { version = "3.0.0-pre.6", features = ["tokio"] }
ntex-multipart = "3.0.0"
futures = "0.3"
