[package]
name = "rustls-example"
version = "3.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "rustls-server"
path = "src/main.rs"

[dependencies]
env_logger = "0.10"
rustls = "0.21"
rustls-pemfile = "0.3"
ntex = { version = "1.0", features = ["rustls", "tokio"] }
ntex-files = "0.4"
