[package]
name = "template_yarte"
version = "0.0.1"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
publish = false
edition = "2018"

workspace = ".."

[dependencies]
env_logger = "0.8"

yarte = { version = "0.8", features = ["html-min"]  }

ntex = "0.2.0-b.14"

[build-dependencies.yarte_helpers]
version = "0.8"
default-features = false
features = ["config"]

[dev-dependencies]
bytes = "0.5.4"

