[package]
name = "template_yarte"
version = "0.0.2"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
publish = false
edition = "2018"

workspace = ".."

[dependencies]
env_logger = "0.10"
yarte = { version = "0.15", features = ["html-min"]  }
ntex = { version = "0.6.0-beta.0", features = ["tokio"] }

[build-dependencies.yarte_helpers]
version = "0.8"
default-features = false
features = ["config"]
