[package]
name = "template_yarte"
version = "1.0.0"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
publish = false
edition = "2018"

workspace = ".."

[dependencies]
env_logger = "0.11"
yarte = { version = "0.15", features = ["html-min"]  }
ntex = { version = "3.0", features = ["tokio"] }

[build-dependencies.yarte_helpers]
version = "0.8"
default-features = false
features = ["config"]
