[package]
authors = ["Dan Munckton <dangit@munckfish.net>"]
name = "todo"
version = "4.0.0"
edition = "2018"

[dependencies]
ntex = { version = "2", features = ["tokio"] }
ntex-files = "1.0"
ntex-session = "1.0"
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.3.2"
