[package]
authors = ["Dan Munckton <dangit@munckfish.net>"]
name = "todo"
version = "3.0.0"
edition = "2018"

[dependencies]
ntex = { version = "3.0", features = ["tokio"] }
ntex-files = "3.1"
ntex-session = "3.2"
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.3.2"
