[package]
name = "tokio"
version = "4.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[dependencies]
ntex = { version = "2", features = ["tokio"] }
ntex-files = "2"
ntex-session = "2"
ntex-rt = "0.4.13"
futures = "0.3"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
