[package]
name = "tokio"
version = "3.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[dependencies]
ntex = { version = "3.0", features = ["tokio"] }
ntex-files = "3.1"
ntex-session = "3.2"
ntex-rt = "3"
futures = "0.3"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
