[package]
name = "websocket-chat"
version = "3.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-chat-server"
path = "src/main.rs"

[dependencies]
ntex = { version = "0.6.5", features = ["tokio"] }
ntex-files = "0.2"

rand = "0.8"
futures = "0.3"
env_logger = "0.10"
serde = "1.0"
serde_json = "1.0"
