[package]
name = "websocket-chat"
version = "3.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-chat-server"
path = "src/main.rs"

[dependencies]
ntex = { version = "3.0.0-pre.2", features = ["tokio"] }
ntex-files = "3.0.0-pre.0"

rand = "0.8"
futures = "0.3"
env_logger = "0.11"
serde = "1.0"
serde_json = "1.0"
