[package]
name = "websocket-lowlevel"
version = "4.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-lowlevel-server"
path = "src/main.rs"

[[bin]]
name = "websocket-lowlevel-client"
path = "src/client.rs"

[dependencies]
ntex = { version = "1.0", features = ["tokio", "openssl"] }
ntex-files = "0.4"
env_logger = "0.10"
futures = "0.3"

openssl = "0.10"
ntex-tls = { version="1.0", features = ["openssl"] }