[package]
name = "chat-example"
version = "2.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "ws-client"
path = "src/client.rs"

[dependencies]
ntex = { version = "0.5", features = ["tokio"] }
ntex-mqtt = "0.8.3"
ntex-amqp = "0.6.2"

rand = "0.8"
byteorder = "1.4"
futures = "0.3"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
