[package]
name = "chat-example"
version = "3.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-tcp-chat-server"
path = "src/main.rs"

[[bin]]
name = "websocket-tcp-chat-client"
path = "src/client-ws.rs"

[[bin]]
name = "websocket-tcp-chat-tcp-client"
path = "src/client-tcp.rs"

[dependencies]
ntex = { version = "0.6.2", features = ["tokio"] }
ntex-mqtt = "0.10.0-beta.0"
ntex-amqp = "0.7.0-beta.0"
ntex-files = "0.2"

rand = "0.8"
byteorder = "1.4"
futures = "0.3"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
