[package]
name = "websocket"
version = "4.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket-server"
path = "src/main.rs"

[[bin]]
name = "websocket-client"
path = "src/client.rs"

[dependencies]
ntex = { version = "2", features = ["tokio"] }
ntex-files = "1.0"
env_logger = "0.11"
futures = "0.3"
